# xcode-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xcode-cmake.py
hello/: SceneDelegate.m  ViewController.m  project.pbxproj
pbxproj/: PBXNativeTarget.py  PBXObject.py  PBXProject.py  XCBuildConfiguration.py  XCConfigurationList.py  __init__.py
